# robomuse-winter-18-19

./: README.md
helperScripts/: lm_test.py
src/rm4/cmvision/src/: color_gui.cpp
src/rm4/cmvision_3d/colors/: colors.txt
src/rm4/cmvision_3d/launch/: rm4_cmvision_tc.launch
src/rm4/my_blob_tracking_pkg/: CMakeLists.txt  colortestvalues  package.xml
src/rm4/my_blob_tracking_pkg/color_files/: colors.txt  colors_changed.txt
src/rm4/rm4/: CMakeLists.txt  package.xml
src/rm4/rm4_apps/: CMakeLists.txt  package.xml
src/rm4/rm4_apps/launch/: follower.launch  (+4 more)
src/rm4/rm4_bringup/: CMakeLists.txt  fake_rm4backup.launch  package.xml
src/rm4/rm4_description/: CMakeLists.txt  package.xml
src/rm4/rm4_dynamixels/: CMakeLists.txt  package.xml
src/rm4/rm4_gazebo/: CMakeLists.txt  package.xml
src/rm4/rm4_nav/: CMakeLists.txt  package.xml  setup.py
src/rm4/rm4_speech/: CMakeLists.txt  package.xml
src/rm4/rm4_vision/: CMakeLists.txt  package.xml  setup.py
src/rm4/rm4_vision/launch/: camshift.launch  cv_bridge_demo.launch  cv_bridge_demo_mod.launch  face_detector.launch  face_tracker.launch  face_tracker2.launch  good_features.launch  lk_tracker.launch  ros2opencv2.launch  template_tracker.launch  usb_cam.launch  video2ros.launch  webcam.launch
src/rm4/rm4_vision/nodes/: camshift.py  cv_bridge_demo.py  face_tracker.py  face_tracker2.py  fast_template.py  template_tracker.py  video2ros.py  webcam_cv3.py
src/rm4/rm4_vision/scripts/: feedRecord.py
src/rm4/rm4_vision/src/: squarerm4.cpp
src/rm4/rm4_vision/src/rm4_vision/: face_detector.py  good_features.py  lk_tracker.py  ros2opencv2.py
src/robomuse-ros-master/robomuse_drivers/: CMakeLists.txt
(+90 files in other folders)
